updated passposrt serialization

--- a/views/editAnswers.ejs
+++ b/views/editAnswers.ejs
@@ -27,7 +27,7 @@
                         <%- include('navigation.ejs',{data:data})%>
                             <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
-                                <h1 class="text-gray-600 text-2xl font-semibold text-center">Edit Question</h1>
+                                <h1 class="text-gray-600 text-2xl font-semibold text-center">Edit Answer</h1>
                                 <form id="update_user" class="form">
                                     <input type="hidden" name="_csrf" value="<%=csrfToken%>" id="_csrf" />
                                     <input type="hidden" name="answerId" value="<%=answer.id%>" id="answerId" />
