--- a/views/voterLogin.ejs
+++ b/views/voterLogin.ejs
@@ -14,7 +14,7 @@
         <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style="width: 500px; margin-top: 30px; height: 70%; width: 500px;">
             <div class="mx-auto flex  flex-col	mt-5 ">
                 <h6 class="py-3 text-center text-2xl font-bold text-green-600">Sign In</h6>
-                <form action="/session" method="post">
+                <form action="/elections/session" method="post">
                     <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
                    
                    <div class="py-3">
