--- a/views/displayVoters.ejs
+++ b/views/displayVoters.ejs
@@ -75,7 +75,7 @@
                     <div>
                       <input type="text" name="voter_Id" class="border border-gray-300 text-gray-900 rounded p-2 "
                         placeholder="Voter Id" />
-                      <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 "
+                      <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 " minlength="8"
                         placeholder="password" />
                       <button type="submit"
                         class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 mt-5">ADD</button>
