--- a/views/createQuestions.ejs
+++ b/views/createQuestions.ejs
@@ -30,7 +30,8 @@
                   <input type="hidden" name="electionId" value="<%=election.id%>" />
                   <div class="p-3">
                     <label for="title" class="text-gray-600 text-lg py-2">What's the title of the question?</label>
-                    <input type="text" name="title" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
+                    <input type="text" name="title"
+                      class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                   </div>
                   <div class="p-3">
                     <label for="description" class="text-gray-600 text-lg py-2">What's the description of the
