--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -18,26 +18,27 @@
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
         style=" margin: 30px auto; height: 75%; width: 65%;">
         <div class="mx-auto">
-          
-              <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
-                <h1 class="text-gray-600 text-2xl font-semibold text-center">Forgot Password</h1>
-                <form method="post" action="/admins/forgotPassword">
-                  <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
-                  <div class="p-3">
-                    <label for="email" class="text-gray-600 text-lg py-2">Enter your email</label>
-                    <input type="email" name="email" required class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
-                  </div>
-                 
-                  <div class="p-3">
-                    <button type="submit"
-                      class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">Submit</button>
-                  </div>
-                </form>
-                <%-include("errorMsg.ejs")%>
-                <%-include("successMsg.ejs")%>
+          <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
+            <h1 class="text-gray-600 text-2xl font-semibold text-center">Forgot Password</h1>
+            <form method="post" action="/admins/forgotPassword">
+              <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+              <div class="p-3">
+                <label for="email" class="text-gray-600 text-lg py-2">Enter your email</label>
+                <input type="email" name="email" required
+                  class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
               </div>
+
+              <div class="p-3">
+                <button type="submit"
+                  class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">Submit</button>
+              </div>
+            </form>
+            <%-include("errorMsg.ejs")%>
+              <%-include("successMsg.ejs")%>
+
+          </div>
         </div>
       </div>
   </main>
