--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,55 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="<%=csrfToken%>" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./css/styles.css" ref="stylesheet"/>
-    <title><%= title %> </title>
-<body>
-    <main class="h-screen " style="background-color: #6c6c7f24; ">
-        <%- include('header.ejs',{admin:null})%>
-        <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style=" margin-top: 20px; width: 500px;">
-            <div class="mx-auto flex  flex-col	">
-                <h6 class="py-3 text-center text-green-600 text-2xl">Sign-Up as a new user</h6>
-            <form action="/admins/register" method="post">
-                <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
-                <div class="py-3">
-                    <label for="firstName">First Name</label>
-                    <input type="text" name="firstName" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
-                </div>
-                <div class="py-3">
-                    <label for="lastName">Last Name</label>
-                    <input type="text" name="lastName" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
-                </div>
-               <div class="py-3">
-                <label for="email">Email</label>
-                <input type="email" name="email" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
-               </div>
-               <div class="py-3"> 
-                <label for="password">Password</label>
-                <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
-               </div>
-               <div class="py-3"> 
-                <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">SIGN UP</button>
-               </div>
-                
-            </form>
-            <p class="py-2">
-                Already have an account?
-                <a href="/login" class="text-green-600 font-bold">Sign-In</a>
-              </p>
-            </div>
-            
+    <link href="./css/styles.css" ref="stylesheet" />
+    <title>
+        <%= title %>
+    </title>
+    <style>
+        body {
+            background-color: #6c6c7f24;
+        }
+    </style>
+</head>
 
-        </div>
-        <div class="mx-auto sm:container m-5 p-3" style="width: 500px;">
-            <%-include("errorMsg.ejs")%>
-        </div>
-        
+<body>
+    <main class="h-screen ">
+        <%- include('header.ejs',{admin:null})%>
+            <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md"
+                style=" margin-top: 20px; width: 500px;">
+                <div class="mx-auto flex  flex-col	">
+                    <h6 class="py-3 text-center text-green-600 text-2xl">Sign-Up as a new user</h6>
+                    <form action="/admins/register" method="post">
+                        <input required type="hidden" name="_csrf" value="<%=csrfToken%>" />
+                        <div class="py-3">
+                            <label for="firstName">First Name</label>
+                            <input required type="text" name="firstName"
+                                class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
+                        </div>
+                        <div class="py-3">
+                            <label for="lastName">Last Name</label>
+                            <input required type="text" name="lastName"
+                                class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
+                        </div>
+                        <div class="py-3">
+                            <label for="email">Email</label>
+                            <input required type="email" name="email"
+                                class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
+                        </div>
+                        <div class="py-3">
+                            <label for="password">Password</label>
+                            <input required type="password" name="password"
+                                class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
+                        </div>
+                        <div class="py-3">
+                            <button type="submit"
+                                class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">SIGN
+                                UP</button>
+                        </div>
+
+                    </form>
+                    <p class="py-2">
+                        Already have an account?
+                        <a href="/login" class="text-green-600 font-bold">Sign-In</a>
+                    </p>
+                </div>
+
+
+            </div>
+            <div class="mx-auto sm:container m-5 p-3" style="width: 500px;">
+                <%-include("errorMsg.ejs")%>
+            </div>
+
     </main>
 
 </body>
+
 </html>
