--- a/views/manageQuestions.ejs
+++ b/views/manageQuestions.ejs
@@ -13,23 +13,24 @@
   <script>
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
     var currentId;
- 
+
     function deleteQuestion(id) {
       var result = confirm("Are you sure?")
-      if(result){
-      fetch(`/questions/${id}`, {
-        method: 'delete',
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          _csrf: token,
-          electionId:<%-JSON.stringify(election.id)%>
+      if (result) {
+        fetch(`/questions/${id}`, {
+          method: 'delete',
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            _csrf: token,
+            electionId:<% -JSON.stringify(election.id) %>
         })
-      }).then((res) => {
-        if (res.ok) {
-          window.location.reload();
-        }
-      }).catch((err) => console.log(err))
-    }}
+        }).then((res) => {
+          if (res.ok) {
+            window.location.reload();
+          }
+        }).catch((err) => console.log(err))
+      }
+    }
   </script>
 </head>
 
@@ -44,7 +45,7 @@
             {label:`Questions`,url:`/elections/${election.id}/questions`,current:true}, ] %>
             <%- include('navigation.ejs',{data:data})%>
 
-              
+
               <div class="flex justify-between mt-3">
                 <h1 class="text-2xl font-semibold text-gray-600">
                   <%=election.title%>
@@ -59,7 +60,9 @@
                   <p class="text-lg text-gray-500">You haven't created any questions</p>
                   <%}%>
                     <% if(questions.length> 0){%>
-                      <p class="text-lg text-gray-500">Your election has <span class="font-semibold text-gray-900"><%=questions.length%></span> questions in the ballot</p>
+                      <p class="text-lg text-gray-500">Your election has <span class="font-semibold text-gray-900">
+                          <%=questions.length%>
+                        </span> questions in the ballot</p>
                       <table class="text-left w-full mt-5 overflow-y-scroll">
                         <thead class="bg-black flex text-white w-full" style="background-color: black;">
                           <tr class="flex w-full mb-4">
@@ -89,8 +92,8 @@
                               <td class="p-4 w-1/4">
                                 <div class="flex justify-between">
                                   <a href="/questions/<%=questions[i].id%>/edit">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                      stroke="currentColor" class="w-5 h-6 stroke-green-600">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                      stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-green-600">
                                       <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                                     </svg></a>
@@ -113,7 +116,7 @@
                       <%}%>
               </div>
 
-             
+
         </div>
       </div>
   </main>
