--- a/views/voterLogin.ejs
+++ b/views/voterLogin.ejs
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="<%= csrfToken %>" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./css/styles.css" ref="stylesheet"/>
-    <title><%= title %> </title>
+    <link href="./css/styles.css" ref="stylesheet" />
+    <title>
+        <%= title %>
+    </title>
+
 <body>
     <main class="h-screen " style="background-color: #6c6c7f24; ">
         <%- include('header.ejs',{admin:null})%>
-        <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style="width: 500px; margin-top: 30px; height: 70%; width: 500px;">
-            <div class="mx-auto flex  flex-col	mt-5 ">
-                <h6 class="py-3 text-center text-2xl font-bold text-green-600">Sign In</h6>
-                <form action="/elections/session" method="post">
-                    <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
-                   
-                   <div class="py-3">
-                    <label for="voter_Id">Voter Id</label>
-                    <input type="voter_Id" name="voter_Id" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
-                   </div>
-                   <div class="py-3"> 
-                    <label for="password">Password</label>
-                    <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
-                   </div>
-                   <div class="py-3"> 
-                    <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">SIGN IN</button>
-                   </div>
-                    
-                </form>
-                
-                <%-include("errorMsg.ejs")%>
+            <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md"
+                style="width: 500px; margin-top: 30px; height: 70%; width: 500px;">
+                <div class="mx-auto flex  flex-col	mt-5 ">
+                    <h6 class="py-3 text-center text-2xl font-bold text-green-600">Sign In</h6>
+                    <form action="/elections/session" method="post">
+                        <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+
+                        <div class="py-3">
+                            <label for="voter_Id">Voter Id</label>
+                            <input type="voter_Id" name="voter_Id"
+                                class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
+                        </div>
+                        <div class="py-3">
+                            <label for="password">Password</label>
+                            <input type="password" name="password"
+                                class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
+                        </div>
+                        <div class="py-3">
+                            <button type="submit"
+                                class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">SIGN
+                                IN</button>
+                        </div>
+
+                    </form>
+
+                    <%-include("errorMsg.ejs")%>
+                </div>
+
             </div>
-           
-        </div>
-   
+
     </main>
 </body>
+
 </html>
