--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,8 @@
 
         }
     </style>
-
+   
+</head>
 <body>
     <main class="h-screen" style="background-color: #6c6c7f24;">
         <%- include('header.ejs',{admin:null})%>
@@ -34,15 +35,26 @@
                             <input type="email" name="email"
                                 class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2 " required />
                         </div>
-                        <div class="py-3">
+                        <div class="py-3 ">
                             <label for="password" class="text-lg">Password</label>
-                            <input type="password" name="password"
+                            <div class="flex items-center relative">
+                                
+                                <input type="password" name="password" id="password"
                                 class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" required />
+                                <button type="button" class="absolute ml-2  right-2" onclick="viewPassword()">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-green-400	">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                                  </svg>
+                                  </button>
+                            </div>
+                           
                         </div>
-                        <div class="py-3">
+                        <div class="py-3 ">
                             <button type="submit"
                                 class="text-white bg-green-600 hover:bg-green-800 font-semibold rounded px-5 py-2 w-full">SIGN
                                 IN</button>
+                                
                         </div>
 
                     </form>
@@ -58,6 +70,18 @@
             </div>
 
     </main>
+    <script>
+        const password = document.getElementById('password')
+       function viewPassword(){
+        console.log('clicked')
+        if(password.type=="text"){
+            password.type="password"
+
+        }else{
+            password.type='text'
+        }
+       }
+    </script>
 </body>
 
 </html>
