--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -38,7 +38,7 @@
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
         style=" margin: 30px auto; height: 75%; width: 65%;">
         <div class="mx-auto p-6">
-          <h1 class="text-3xl font-semibold text-gray-600">
+          <h1 class="text-3xl font-semibold text-gray-600 text-center">
             <%=election.title%>
           </h1>
           <%if(election.status=="created" ){%>
@@ -75,25 +75,33 @@
                       <input type="hidden" name="electionId" value="<%=election.id%>" />
 
                       <%for(var i=0; i<groupedByQuestion.length;i++){%>
-                        <div>
-                          <p><span>
-                              <%=i+1 %>
+                        <div class="py-3">
+                          <p class="text-2xl font-semibold"><span>
+                              <%=i+1%>, 
                             </span>
                             <%=groupedByQuestion[i].title%>
                           </p>
                         </div>
-                        <div>
+                        <div >
+                          <p class="text-gray-600 text-xl font-light">
+                            <%=groupedByQuestion[i].description%>
+                          </p>
+                        </div>
+                        <div class="py-3 flex flex-col px-3">
                           <%for(var l=0; l< groupedByQuestion[i].answers.length;l++) {%>
-                            <input type="radio" name='<%=groupedByQuestion[i].id%>'
-                              value='<%=groupedByQuestion[i].answers[l]["id"]%>'>
-                            <label for='<%=groupedByQuestion[i].id%>'>
-                              <%=groupedByQuestion[i].answers[l]["content"]%>
-                            </label>
-                            <% }%>
-                              <%}%>
+                            <div>
+                                <input type="radio" name='<%=groupedByQuestion[i].id%>'
+                                value='<%=groupedByQuestion[i].answers[l]["id"]%>'>
+                              <label for='<%=groupedByQuestion[i].id%>'>
+                                <%=groupedByQuestion[i].answers[l]["content"]%>
+                              </label>
+                              <% }%>
+                                <%}%>
+                            </div>
+                          
                         </div>
 
-                        <button type="submit" class="bg-green-600 py-2 px-3 text-white">Vote</button>
+                        <button type="submit" class="bg-green-600 py-2 px-3 text-white  mt-5" style="width: 300px;">VOTE</button>
                     </form>
                   <% }%>
              <%}%>  
