--- a/views/electionDetailsPage.ejs
+++ b/views/electionDetailsPage.ejs
@@ -15,6 +15,8 @@
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
     function launchElection(id) {
       // let compelete = false
+      //check how many questions r there
+      //check how many answers each question has
       fetch(`/elections/${id}/launch`, {
         method: 'put',
         headers: { "Content-Type": "application/json" },
@@ -26,7 +28,7 @@
           window.location.reload();
         }
       }).catch((err) => {
-        window.alert(err.message)
+        window.alert("You can't update an election which has no questions / has a question with only one answer")
         console.log({ err })
       })
     }
