--- a/views/manageQuestions.ejs
+++ b/views/manageQuestions.ejs
@@ -28,7 +28,7 @@
           if (res.ok) {
             window.location.reload();
           }
-        }).catch((err) => console.log(err))
+        }).catch((err) => window.alert("Unable to delete\nA question must have atleast one question"))
       }
     }
   </script>
