updated error controller

--- a/views/manageQuestions.ejs
+++ b/views/manageQuestions.ejs
@@ -14,21 +14,25 @@
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
     var currentId;
 
-    function deleteQuestion(id) {
+    function deleteQuestion(id, electionId) {
       var result = confirm("Are you sure?")
       if (result) {
         fetch(`/questions/${id}`, {
           method: 'delete',
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
+            electionId: electionId,
             _csrf: token,
-            electionId:<% -JSON.stringify(election.id) %>
-        })
+
+          })
         }).then((res) => {
           if (res.ok) {
             window.location.reload();
           }
-        }).catch((err) => window.alert("Unable to delete\nA question must have atleast one question"))
+        }).catch((err) => {
+          window.alert("Unable to delete\nAn election must have atleast one question")
+          console.log(err.message)
+        })
       }
     }
   </script>
@@ -97,7 +101,7 @@
                                       <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                                     </svg></a>
-                                  <a href='' onclick="deleteQuestion('<%=questions[i].id%>')">
+                                  <a href='' onclick="deleteQuestion('<%=questions[i].id%>','<%=election.id%>')">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                       stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-red-600">
                                       <path stroke-linecap="round" stroke-linejoin="round"
